# Labs

./: pyproject.toml
files_for_lab/lab1n2/input/: data.txt  fig8.txt
labs/: lab1n2.py  lab3.py
