[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["MPHRS <serafimin2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scikit-image = "^0.20.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
